Anchor component; Fix draggable img on firefox;

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,3 +26,9 @@ body {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+a, img {
+  -webkit-user-drag: none;
+  user-select: none;
+  user-drag: none;
+}
